# hearthstone-sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  .python-version  data.dvc  dvc.lock.dvc  dvc.yaml  pyproject.toml
.dvc/: config
data/: twitter_users.txt
data/raw/: .gitignore.dvc
data_gathering/: Dockerfile  pyproject.toml
data_gathering/fastapi_cloudrun_data_gathering/: main.py  search.py  settings.py  tasks.py
hearthstone_sentiment_analysis/: download_tweets.py  settings.py  tweets_to_df.py
hearthstone_sentiment_analysis/data_gathering/: __main__.py  search.py  utils.py
hearthstone_sentiment_analysis/prefect/: tweet-flow.py
notebooks/: EDA.ipynb
scripts/: format.sh  lint.sh
