[tool.poetry]
authors = ["Andrii Sherman <watemerald@gmail.com>"]
description = ""
name = "hearthstone-sentiment-analysis"
version = "0.1.0"

[tool.poetry.dependencies]
dvc = {extras = ["gs"], version = "^2.1.0"}
jsonlines = "^2.0.0"
pandas = "^1.2.2"
prefect = "^0.14.8"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
python = "^3.8"
requests = "^2.25.1"
google-cloud-storage = "^1.38.0"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "^20.8b1"
data-science-types = "*"
flake8 = "^3.9.1"
isort = "^5.7.0"
jupyter = "*"
mypy = "*"
pre-commit = "*"
pylint = "^2.6.0"
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
